--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Yo Momma Jokes</title>
-  <!-- UnoCSS CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/unocss@0.57.0/dist/unocss.min.js" defer></script>
+
+  <!-- Tailwind CDN for quick demo -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-50 min-h-screen p-6">
   <header class="max-w-4xl mx-auto mb-6">
@@ -27,9 +28,10 @@
     <section id="multiple-jokes" class="bg-white p-4 rounded shadow">
       <div class="flex items-center justify-between mb-3">
         <h2 class="text-lg font-semibold">Multiple Jokes</h2>
-        <div>
+        <div class="flex items-center">
           <label for="count" class="mr-2 text-sm">Count</label>
-          <input id="count" type="number" min="1" max="10" value="3" class="w-16 px-2 py-1 border rounded" />
+          <input id="count" type="number" min="1" max="10" value="3"
+                 class="w-16 px-2 py-1 border rounded" />
           <button id="btn-multiple" class="ml-2 px-3 py-1 bg-emerald-600 text-white rounded">Fetch</button>
         </div>
       </div>
@@ -37,7 +39,7 @@
     </section>
   </main>
 
-  <script type="module" src="scripts/api.js"></script>
+  <!-- Load only the top-level module; it imports api.js -->
   <script type="module" src="scripts/ui.js"></script>
 </body>
 </html>
