--- a/writeup.html
+++ b/writeup.html
@@ -4,16 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AI Write-up</title>
-  <script src="https://cdn.jsdelivr.net/npm/unocss@0.57.0/dist/unocss.min.js" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-50 min-h-screen p-6">
   <main class="max-w-3xl mx-auto bg-white p-6 rounded shadow">
     <h1 class="text-xl font-semibold mb-4">AI Tool Effectiveness</h1>
     <p class="text-gray-800">
-      I used Copilot with two models (GPT-4o and GPT-4o‑mini) to scaffold this project, generate fetch functions, and produce UI code. The AI was helpful for producing runnable code quickly and suggesting error handling and UX details. GPT-4o produced more detailed explanations and a fuller scaffold on the first try, while GPT-4o‑mini returned shorter, faster snippets that required a couple of follow‑ups to be complete. Example prompts and full responses were saved in my lab notes for comparison.
-    </p>
-    <p class="mt-4 text-sm text-gray-500">
-      Note: Yo Momma API docs used for endpoints and query parameters. 
+      I used Copilot with two models to scaffold this project and generate fetch and UI code. Tailwind CDN replaced UnoCSS for immediate styling in Codespaces. The AI produced runnable code quickly; the larger model gave more detailed explanations while the smaller model returned concise snippets. Full prompts and responses are saved in my lab notes for comparison.
     </p>
     <p class="mt-6">
       <a href="index.html" class="text-sky-600 hover:underline">Back to Home</a>
